--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -71,13 +71,13 @@
             <div class="panel-heading">
               <input type="text" class="form-control name" ng-init="item.editable = false" ng-model="item.name" value="{{item.name}}" ng-disabled="!item.editable" />            </div>
             <div class="panel-body">
-              <p><span class="label label-default">Type:</span> <input type="text" class="form-control" ng-init="item.editable = false" ng-model="item.type" value="{{item.type}}" ng-disabled="!item.editable" /></p>
-              <p><span class="label label-default">Priority:</span> <input type="text" class="form-control" ng-init="item.editable = false" ng-model="item.priority" value="{{item.priority}}" ng-disabled="!item.editable" /></p>
-              <p><span class="label label-default">Description:</span> <textarea type="text" class="form-control" ng-init="item.editable = false" ng-model="item.description" rows="5" value="{{item.description}}" ng-disabled="!item.editable"></textarea></p>
-              <p><span class="label label-default">Assignee:</span> <input type="text" class="form-control" ng-init="item.editable = false" ng-model="item.assignee" value="{{item.assignee}}" ng-disabled="!item.editable" /></p>
-              <p><span class="label label-default">Reporter:</span> <input type="text" class="form-control" ng-init="item.editable = false" ng-model="item.reporter" value="{{item.reporter}}" ng-disabled="!item.editable" /></p>
-              <p><span class="label label-default">Created:</span> <time>{{ticket.formatTime(item.created)}}</time></p>
-              <p><span class="label label-default">Updated:</span> <time>{{ticket.formatTime(item.updated)}}</time></p>
+              <p><span class="ticket-label">Type:</span> <input type="text" class="form-control" ng-init="item.editable = false" ng-model="item.type" value="{{item.type}}" ng-disabled="!item.editable" /></p>
+              <p><span class="ticket-label">Priority:</span> <input type="text" class="form-control" ng-init="item.editable = false" ng-model="item.priority" value="{{item.priority}}" ng-disabled="!item.editable" /></p>
+              <p><span class="ticket-label">Description:</span> <textarea type="text" class="form-control" ng-init="item.editable = false" ng-model="item.description" rows="5" value="{{item.description}}" ng-disabled="!item.editable"></textarea></p>
+              <p><span class="ticket-label">Assignee:</span> <input type="text" class="form-control" ng-init="item.editable = false" ng-model="item.assignee" value="{{item.assignee}}" ng-disabled="!item.editable" /></p>
+              <p><span class="ticket-label">Reporter:</span> <input type="text" class="form-control" ng-init="item.editable = false" ng-model="item.reporter" value="{{item.reporter}}" ng-disabled="!item.editable" /></p>
+              <p><span class="ticket-label">Created:</span> <time>{{ticket.formatTime(item.created)}}</time></p>
+              <p><span class="ticket-label">Updated:</span> <time>{{ticket.formatTime(item.updated)}}</time></p>
               <div class="center-block button-container {{item.editable}}">
                 <button class="btn btn-primary" ng-show="!item.editable" ng-click="ticket.makeEditable(item)">Edit</button>
                 <button class="btn btn-primary" ng-show="item.editable" ng-click="ticket.edit(item)">Save</button>
