--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -73,17 +73,6 @@ body {
   cursor: text;
 }
 
-textarea.form-control[disabled] {
-  height: 25px;
-  resize: none;
-  display: block;
-  margin-top: 5px;
-  padding: 0;
-  /*padding-left: 10px;*/
-  color: #333;
-  width: 100%;
-}
-
 .name[disabled] {
   background: none;
   color: #333;
@@ -97,6 +86,6 @@ textarea.form-control[disabled] {
     padding-right: 10px;
 }
 
-time {
-  color: #555;
+textarea {
+  resize: vertical;
 }
